# dicom-anonymizer

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  DicomAnonymizer.py  LICENSE  MANIFEST.in  MainAnonymizer.py  Makefile  Pipfile  README.md  cspell.json  logging.ini  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yml  publish-on-pypi.yml
.github/workflows/: ci.yml  publish-on-pypi.yml  tester.yml
Version/: dicomanonymizer-master.tar
dicomanonymizer/: __init__.py  anonym_state.py  anonymizer.py  batch_anonymizer.py  dicom_utils.py  dicomfields.py  dicomfields_2024b.py  dicomfields_selector.py  format_tag.py  simpledicomanonymizer.py  tag_to_hex_string.py  utils.py
dicomanonymizer/dicom_anonymization_databases/: dicomfields_2023.py  dicomfields_2024b.py
doc/: Setup_build_test.md  Usage.md
examples/: .gitignore  Pipfile  README.md  anonymize_dataset.py  anonymize_extra_rules.py
scripts/: README.md  scrap_DICOM_fields.py
tests/: test_anon.py  test_anonymization_without_dicom.py  test_cli.py  test_dicomfields_selector.py  test_private_tags.py
