[project]
name = "dicom_anonymizer"
version = "1.0.11"
authors = [
  { name="Laurenn Lam", email="laurenn.lam@kitware.com" },
]
description = "Program to anonymize dicom files with default and custom rules"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "Topic :: Software Development :: Build Tools",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Programming Language :: Python"
]
keywords = ["dicom", "anonymizer" , "medical"]

dependencies = [
  "pydicom",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "setuptools", # TODO: Remove this once pydicom removes dependency on setuptools
]

[project.scripts]
dicom-anonymizer = "dicomanonymizer.anonymizer:main"

[project.urls]
"Homepage" = "https://github.com/KitwareMedical/dicom-anonymizer"
"Bug Tracker" = "https://github.com/KitwareMedical/dicom-anonymizer/issues"

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

