[metadata]
name = dicom_anonymizer
version = attr: dicomanonymizer.__version__
description = Program to anonymize dicom files with default and custom rules
long_description = file: README.md, LICENSE
license = BSD 3-Clause License
keywords = dicom, anonymizer, medical imaging
url = https://github.com/ademyanchuk/dicom-anonymizer
author = "Alexey Demyanchuk [current fork author and maintainer], Laurenn Lam [original author]"
author_email = alexeydemyanchuk@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    pydicom >=2.1.1
    tqdm
python_requires = >=3.8

[options.entry_points]
console_scripts =
    dicom-anonymizer = dicomanonymizer.anonymizer:main
    dicom-batch-anon = dicomanonymizer.batch_anonymizer:main
